--- a/ulearner-backend/src/main/resources/application.yml
+++ b/ulearner-backend/src/main/resources/application.yml
@@ -36,3 +36,10 @@ logging:
   level:
     org.springframework: INFO
     com.ulearner: DEBUG
+
+app:
+  security:
+    jwt:
+      secret: ${JWT_SECRET:Wm1Kc2d2N3B5QnR4c0pDbE1uU3ZQdXJ5dE1LbE5TS1Q=}
+      access-token-expiration: PT15M
+      refresh-token-expiration: P7D
