--- a/ulearner-backend/.env.example
+++ b/ulearner-backend/.env.example
@@ -1,6 +1,12 @@
 NODE_ENV=development
 PORT=3001
 CORS_ALLOWED_ORIGINS=http://localhost:3000
+JWT_SECRET=super-secret-ul-token
+JWT_EXPIRES_IN=15m
+JWT_REFRESH_SECRET=super-secret-refresh-token
+JWT_REFRESH_EXPIRES_IN=7d
+MEDIA_BASE_URL=http://localhost:3001
+MEDIA_UPLOAD_DIR=uploads/media
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=ulearner
